2013-12-31  Arthur de Jong <arthur@arthurdejong.org>

	* [5c1765e] stdnum/iban.dat, stdnum/isbn.dat: Update database files

2013-12-31  Arthur de Jong <arthur@arthurdejong.org>

	* [4217c35] stdnum/isan.py, stdnum/meid.py, stdnum/util.py: Add
	  pragma: no cover for Python 3

	  Some statements are not covered in Python 3 tests.

2013-12-31  Arthur de Jong <arthur@arthurdejong.org>

	* [6c49ca8] getiban.py: Update getiban script

	  This switches to use the csv module to support multi-line column
	  values.  This also handles some problems in the BBAN structure
	  column that would contain an IBAN structure.

2013-12-31  Arthur de Jong <arthur@arthurdejong.org>

	* [0ee74e5] ChangeLog: Generate Changelog with different formatter

	  git log --date=short --name-only \ --format="%x0c%ad	%aN
	      <%aE>%n%n%x09* [%h]%x00%s%n%x00%+b%x00" | \
	    awk 'BEGIN { RS="\f"; FS="\0" } { if ($1) { gsub(/\n*$/,
	    "", $4); gsub(/^\n*/, "", $4); gsub(/\n/, ", ", $4);
	    gsub(/\ngit-svn-id.*/, "", $3); gsub(/\n/, "\n\t  ", $3); print
	    $1 " " $4 ": "; print "\t  " $2 $3 }}' | \ fmt --width=78 -c
	    > ChangeLog

2013-12-30  Cédric Krier <ced@b2ck.com>

	* [a148835] stdnum/gb/vat.py, tests/test_gb_vat.doctest: Add some
	  new VAT numbers for GB

	  Add support for restarting from November 2009 using 9755.
	  Add support for EU format of health authorities

	  See: https://github.com/arthurdejong/python-stdnum/pull/4

2013-12-12  eneq123 <koc@loki.glas.net>

	* [4609a22] getimsi.py, stdnum/imsi.dat: Update parsing in getimsi
	  script

	  This updates the regexes and includes seom optimizations.

	  See: https://github.com/arthurdejong/python-stdnum/issues/1

2013-12-30  Cédric Krier <ced@b2ck.com>

	* [9ec3cb0] stdnum/eu/vat.py: Add support for proxy

2013-12-04  Arthur de Jong <arthur@arthurdejong.org>

	* [7f30979] getimsi.py, stdnum/imsi.dat: Update getimsi script

	  This updates the script due to the Wikipedia article change and